[package]
name = "max3263x"
version = "0.2.0"
edition = "2021"
description = "svd2rust generated peripheral crate for the max3263x"
repository = "https://github.com/arron-speake-bluefruit/max3263x"
license = "MIT"

[dependencies]
cortex-m = "0.7"
vcell = "^0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "^0.6.13"

[features]
rt = ["cortex-m-rt/device"]
